@@ -2974,4 +2974,70 @@ Here is a list of these people:&lt;/small&gt;</property>
   </child>
 </widget>
 
+<widget class="GtkMenu" id="menu_option">
+
+  <child>
+    <widget class="GtkImageMenuItem" id="menu_option_settodefaultvalue">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Set to default value</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="PREFERENCES_expert_reset" last_modification_time="Mon, 21 Mar 2005 17:22:45 GMT"/>
+
+      <child internal-child="image">
+	<widget class="GtkImage" id="image4">
+	  <property name="visible">True</property>
+	  <property name="stock">gtk-revert-to-saved</property>
+	  <property name="icon_size">1</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+      </child>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkImageMenuItem" id="menu_option_toggleoption">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Toggle option</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="PREFERENCES_expert_toggle_option" last_modification_time="Mon, 21 Mar 2005 17:23:23 GMT"/>
+
+      <child internal-child="image">
+	<widget class="GtkImage" id="image5">
+	  <property name="visible">True</property>
+	  <property name="stock">gtk-edit</property>
+	  <property name="icon_size">1</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+      </child>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkImageMenuItem" id="menu_option_editoption">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Edit option</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="PREFERENCES_expert_edit_value" last_modification_time="Mon, 21 Mar 2005 17:24:33 GMT"/>
+
+      <child internal-child="image">
+	<widget class="GtkImage" id="image6">
+	  <property name="visible">True</property>
+	  <property name="stock">gtk-edit</property>
+	  <property name="icon_size">1</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+      </child>
+    </widget>
+  </child>
+</widget>
+
 </glade-interface>
